# pjrt-artifacts

./: .bazelrc  .gitignore  AGENTS.md  MODULE.bazel  README.md  build.sh  setup.sh
.github/: runs-on.yml
.github/workflows/: _build.yaml  _resolve_openxla_commits.yaml  build.yaml  ci.yaml  cleanup-cache.yaml  nightly.yaml  pull_request.yaml  release.yaml
base/: BUILD.bazel  ubuntu_base.lock.json  ubuntu_base.yaml
base/focal/: BUILD.bazel  packages.lock.json  packages.yaml
base/jammy/: BUILD.bazel  packages.lock.json  packages.yaml
base/noble/: BUILD.bazel  packages.yaml
cpu/: BUILD.bazel  cpu_ubuntu.lock.json  cpu_ubuntu.yaml
cuda/: BUILD.bazel  cuda_ubuntu.lock.json  cuda_ubuntu.yaml  ubuntu.sources
openxla/: 20240605-001-Added-FFI-handler-registration-API-to-the-FFI-PjRt-extension.patch  20250205-001-Use-hermetic-CC-toolchain-glibc-2.32.patch  commits.env
openxla/bazelrc/: common.bazelrc  cpu.bazelrc  cuda.bazelrc  linux_armv7.bazelrc  rocm.bazelrc
openxla/bazelrc/rocm/: xla_configure.bazelrc
openxla/bazelrc/upstream/: .bazelrc  README.md  tensorflow.bazelrc
openxla/patches/: 0001-Added-FFI-handler-registration-API-to-the-FFI-PjRt.patch  0001-Drop-the-.so-suffix-for-PjRt-plugin-targets-.dylib-o.patch  0002-Drop-the-.so-suffix-for-PjRt-plugin-targets-.dylib-o.patch  0002-Expose-nvptxcompiler-to-link-against-in-XLA-if-enabl.patch  0002-Use-hermetic-cc-toolchain-for-Linux-CPU-use-glibc-2..patch  0002-Various-macOS-QOL-enchancements.patch  0003-Add-createTritonGPUAllocateWarpGroups-pass-for-ROCm.patch  0003-Expose-nvptxcompiler-to-link-against-in-XLA-if-enabl.patch  0003-Use-DeviceDescription-instead-of-arch-name-in-compil.patch  0003-build-use-hermetic-cc-toolchain-for-Linux-CPU-use-gl.patch  0004-Propagate-memory-space.patch  0004-ROCm-Triton-performance-fixes.patch  0004-build-use-hermetic-cc-toolchain-for-Linux-CPU-use-gl.patch  0005-Apply-precise-block-size-metadata.patch  0005-Fix-apple_support-usage.patch  0005-ROCm-Apply-precise-block-size-metadata.patch  0005-ROCm-Pass-correct-warp-size-to-Triton-pipeline.patch  0005-ROCm-Triton-performance-fixes.patch  0006-Fix-apple_support-usage.patch  0006-Pass-correct-warp-size-to-Triton-pipeline.patch  0006-ROCm-Apply-precise-block-size-metadata.patch  0006-ROCm-Pass-correct-warp-size-to-Triton-pipeline.patch  0007-Fix-C-absl-NoDestructor-usage-with-GCC-11.04.patch  0007-ROCm-rebase-thread-per-warp-computation-on-current-X.patch  0007-add-missing-cuda-cudnn-version.patch  0007-cuda-use-hermetic.patch  0007-rebase-thread-per-warp-computation-on-current-XLA-ma.patch  0008-Fix-apple_support-usage.patch  0008-ROCm-Enable-mfma-instructions-by-passing-the-correct.patch  0008-deps-triton-integrate-branch-1.3.patch  20240318-001-PJRT-C-API-Ensure-C-compliance-for-Profiler-Extension.patch  20240605-001-Added-FFI-handler-registration-API-to-the-FFI-PjRt-extension.patch  20240901-001-Do-not-force-DEVELOPER_DIR-on-macOS.patch  20240901-001-Various-macOS-QOL-enchancements.patch  20240901-002-Set-the-macosx-deployment-target-via-the-bazel-command-line.patch  20240901-003-Only-export-GetPjrtApi-symbol-on-macOS.patch  20250120-001-Enable-nvptxcompiler-with-nvjitlink.patch  20250128-001-PJRT-Expose-should_stage_host_to_device_transfers.patch  20250129-001-perfs-fixup-20-perf.patch  20250205-001-Use-hermetic-CC-toolchain-glibc-2.31.patch  (+7 more)
openxla/patches/rocm/: 0002-Use-hermetic-cc-toolchain-for-Linux-CPU-use-glibc-2..patch  0003-Fixed-issue-with-passing-arch_name-in-CreateTritonPi.patch  test.patch
openxla/patches/upstream/: 0001-Drop-the-.so-suffix-for-PjRt-plugin-targets-.dylib-o.patch  0002-Custom-install-name.patch  0002-Hermetic-cc-toolchain.patch  0002-Use-hermetic-cc-toolchain-for-Linux-CPU-use-glibc-2..patch  0003-Fixed-issue-with-passing-arch_name-in-CreateTritonPi.patch  0003-Hermetic-cc-toolchain.patch  0004-Extend-CUDA-compute-capabilities-to-6.1.patch  0004-Take-shared-lock-on-GPU-when-checking-buffers-during.patch  0004-Take-shared-lock-on-GPU-while-unloading-the-CUDA-mod.patch  0004-xla-gpu-Take-shared-lock-on-GPU-when-checking-buffer.patch  0005-Take-shared-lock-on-GPU-while-unloading-the-CUDA-mod.patch  0005-autotune-inflight-cache.patch  0005-xla-gpu-Take-shared-lock-on-GPU-while-unloading-the-.patch  0006-Add-host-execute-buffer-uses-and-disable-transfer-bu.patch  0006-autotune-inflight-cache.patch  0006-xla-gpu-autotune-inflight-cache.patch  0007-Add-host-execute-buffer-uses-and-disable-transfer-bu.patch  0007-XLA-GPU-Add-host-execute-buffer-uses-and-disable-tra.patch  0008-Replace-vectors.patch  0009-Improve-xla-host-scheduling.patch
openxla/patches/uptream-cpu/: 0001-build-xxd-from-source.patch
rocm/: BUILD.bazel  rocm_ubuntu.lock.json  rocm_ubuntu.yaml  stripped.txt  stripped_focal.txt  targets.lst
tools/: resolve-openxla-heads.sh
utils/bazel/bazelisk/: bazelisk.bzl
utils/bazel/dedup_tar/: defs.bzl
