load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_distroless//apt:defs.bzl", "dpkg_status")
load("@rules_distroless//distroless:defs.bzl", "group", "passwd", "flatten", "cacerts")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//utils/bazel/dedup_tar:defs.bzl", "dedupe_tar")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

passwd(
    name = "passwd",
    entries = [
        {
            "uid": 0,
            "gid": 0,
            "home": "/root",
            "shell": "/bin/bash",
            "username": "r00t",
        },
        {
            "uid": 100,
            "gid": 65534,
            "home": "/home/_apt",
            "shell": "/usr/sbin/nologin",
            "username": "_apt",
        },
    ],
    visibility = ["//visibility:public"],
)

cacerts(
    name = "cacerts",
    package = "@ubuntu_base//ca-certificates/amd64:data",
    visibility = ["//visibility:public"],
)

group(
    name = "group",
    entries = [
        {
            "name": "root",
            "gid": 0,
        },
        {
            "name": "_apt",
            "gid": 65534,
        },
    ],
    visibility = ["//visibility:public"],
)


pkg_tar(
    name = "bazelisk",
    package_dir = "/usr/bin",
    srcs = [
        "@bazelisk//file",
    ],
    visibility = ["//visibility:public"],
)

PACKAGES = [
    "@ubuntu_base//wget",
    "@ubuntu_base//apt",
    "@ubuntu_base//bash",
    "@ubuntu_base//ca-certificates",
    "@ubuntu_base//coreutils" ,
    "@ubuntu_base//dpkg",
    "@ubuntu_base//gawk",
    "@ubuntu_base//libncurses6",
    "@ubuntu_base//perl",
    "@ubuntu_base//python3",
    "@ubuntu_base//tzdata",
    "@ubuntu_base//strace",
    "@ubuntu_base//grep",
    "@ubuntu_base//openssl",
    "@ubuntu_base//build-essential",
    "@ubuntu_base//gcc",
    "@ubuntu_base//g++",
    "@ubuntu_base//gzip",
    "@ubuntu_base//findutils",
    "@ubuntu_base//sed",
    "@ubuntu_base//libelf1",
    "@ubuntu_base//libdrm2",
    "@ubuntu_base//libdrm-amdgpu1",
    "@ubuntu_base//libnuma1",
    "@ubuntu_base//libxml2",
    "@ubuntu_base//libexpat1",
    "@ubuntu_base//libexpat1-dev",
]

flatten(
    name = "flatten_packages",
    tars =  [
        "%s/amd64" % package
        for package in PACKAGES
    ],
)

dedupe_tar(
    name = "packages",
    src = ":flatten_packages",
    visibility = ["//visibility:public"],
)
