load("@aspect_bazel_lib//lib:tar.bzl", "tar", "tar_rule")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_distroless//distroless:defs.bzl", "flatten")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//utils/bazel/dedup_tar:defs.bzl", "dedupe_tar")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

tar(
    name = "symlinks",
    mtree = [
        "./usr/bin/sh type=link link=/bin/bash",
        "./bin/sh type=link link=/bin/bash",
        "./bin/bash type=link link=/usr/bin/bash",
        "./opt/rocm/ type=link link=/opt/rocm-6.2.0/",
        "./usr/bin/which type=link link=/usr/bin/which.debianutils",
        "./usr/bin/bazel type=link link=/usr/bin/bazelisk",
        "./lib/x86_64-linux-gnu/libm.so.6 type=link link=/usr/lib/x86_64-linux-gnu/libm.so.6",
        "./lib/x86_64-linux-gnu/libmvec.so.1 type=link link=/usr/lib/x86_64-linux-gnu/libmvec.so.1",
        "./lib/x86_64-linux-gnu/libc.so.6 type=link link=/usr/lib/x86_64-linux-gnu/libc.so.6 ",
        "./opt/rocm-6.2.0/bin/targets.lst type=link link=/opt/targets.lst",
        "./usr/bin/python type=link link=/usr/bin/python3",
    ],
)


pkg_tar(
    name = "targets",
    package_dir = "/etc/apt/sources.list.d/",
    srcs = [
        "ubuntu.sources",
    ],
)

CUDA_PACKAGES = [
    "@cuda_ubuntu//autoconf",
    "@cuda_ubuntu//automake",
    "@cuda_ubuntu//build-essential",
    "@cuda_ubuntu//ca-certificates",
    "@cuda_ubuntu//llvm-18",
    "@cuda_ubuntu//clang-18",
    "@cuda_ubuntu//clang-tidy-18",
    "@cuda_ubuntu//lld-18",
    "@cuda_ubuntu//clang-format-18",
    "@cuda_ubuntu//wget",
    "@cuda_ubuntu//zlib1g-dev",
]

flatten(
    name = "cuda_packages",
    tars = [
        "%s/amd64" % package
        for package in CUDA_PACKAGES
    ],
)

dedupe_tar(
    name = "strip_packages",
    src = ":cuda_packages",
    strip_directory = 0,
)

oci_image(
    name = "cuda_stripped",
    base = "@cuda_base",
    tars = [
        "//base/noble:bazelisk",
        ":strip_packages",
        ":symlinks",
        "//third_party/openxla:openxla_tar",
        "//third_party/openxla:cuda_configuration_tar",
    ],
    env = {
        "MAX_NUM_WORKERS": -1,
        "TERM": "xterm",
    },
)

oci_load(
    name = "cuda_stripped_tarball",
    image = ":cuda_stripped",
    repo_tags = [
        "distroless/cuda_builder:latest",
    ],
)
