load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_distroless//distroless:defs.bzl", "flatten")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//utils/bazel/dedup_tar:defs.bzl", "dedupe_tar")

pkg_tar(
    name = "targets",
    package_dir = "/opt/",
    srcs = [
        "targets.lst",
    ],
)

tar(
    name = "symlinks",
    mtree = [
        "./usr/bin/sh type=link link=/bin/bash",
        "./bin/sh type=link link=/bin/bash",
        # Noble required
        # "./bin/bash type=link link=/usr/bin/bash",
        "./opt/rocm/ type=link link=/opt/rocm-6.2.0/",
        "./usr/bin/which type=link link=/usr/bin/which.debianutils",
        "./usr/bin/bazel type=link link=/usr/bin/bazelisk",
        # Noble required
        # "./lib/x86_64-linux-gnu/libm.so.6 type=link link=/usr/lib/x86_64-linux-gnu/libm.so.6",
        # "./lib/x86_64-linux-gnu/libmvec.so.1 type=link link=/usr/lib/x86_64-linux-gnu/libmvec.so.1",
        # "./lib/x86_64-linux-gnu/libc.so.6 type=link link=/usr/lib/x86_64-linux-gnu/libc.so.6 ",
        "./opt/rocm-6.2.0/bin/targets.lst type=link link=/opt/targets.lst",
        "./usr/bin/python type=link link=/usr/bin/python3",
    ],
)

ROCM_PACKAGES = [
    # "@rocm_ubuntu//rccl",
    # "@rocm_ubuntu//rocfft",
    # "@rocm_ubuntu//miopen-hip",
    # "@rocm_ubuntu//hip-dev",
    # "@rocm_ubuntu//rocm-dev",
    # "@rocm_ubuntu//rocm-core",
    # "@rocm_ubuntu//rocm-llvm",
    # "@rocm_ubuntu//rocm-libs",
    # "@rocm_ubuntu//rocm-device-libs",
    # "@rocm_ubuntu//hipfft",
    # "@rocm_ubuntu//hipsolver",
    # "@rocm_ubuntu//hipsparse",
    # "@rocm_ubuntu//rocsolver",
    
]

flatten(
    name = "rocm_packages",
    tars = [
        "%s/amd64" % package
        for package in ROCM_PACKAGES
    ],
)

dedupe_tar(
    name = "strip_packages",
    src = ":rocm_packages",
    filter = "stripped_focal.txt",
)

oci_image(
    name = "rocm_stripped",
    base = "@rocm_base",
    tars = [
        "//base/focal:bazelisk",
    ],
    env = {
        "MAX_NUM_WORKERS": -1,
        "ROCM_PATH": "/opt/rocm-6.2.0/",
        "TERM": "xterm",
        "TF_ROCM_AMDGPU_TARGETS": "gfx900,gfx906,gfx908,gfx90a,gfx940,gfx941,gfx942,gfx1030,gfx1100",
    },
)

oci_load(
    name = "rocm_stripped_tarball",
    image = ":rocm_stripped",
    repo_tags = [
        "distroless/rocm_builder:latest",
    ],
)
