load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_distroless//apt:defs.bzl", "dpkg_status")
load("@rules_distroless//distroless:defs.bzl", "group", "passwd", "flatten", "cacerts")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//utils/bazel/dedup_tar:defs.bzl", "dedupe_tar")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

passwd(
    name = "passwd",
    entries = [
        {
            "uid": 0,
            "gid": 0,
            "home": "/root",
            "shell": "/bin/bash",
            "username": "r00t",
        },
        {
            "uid": 100,
            "gid": 65534,
            "home": "/home/_apt",
            "shell": "/usr/sbin/nologin",
            "username": "_apt",
        },
    ],
    visibility = ["//visibility:public"],
)

cacerts(
    name = "cacerts",
    package = "@focal_ubuntu//ca-certificates/amd64:data",
    visibility = ["//visibility:public"],
)

group(
    name = "group",
    entries = [
        {
            "name": "root",
            "gid": 0,
        },
        {
            "name": "_apt",
            "gid": 65534,
        },
    ],
    visibility = ["//visibility:public"],
)


pkg_tar(
    name = "bazelisk",
    package_dir = "/usr/bin",
    srcs = [
        "@bazelisk//file",
    ],
    visibility = ["//visibility:public"],
)

PACKAGES = [
    "@focal_ubuntu//wget",
    "@focal_ubuntu//apt",
    "@focal_ubuntu//bash",
    "@focal_ubuntu//ca-certificates",
    "@focal_ubuntu//coreutils" ,
    "@focal_ubuntu//dpkg",
    "@focal_ubuntu//gawk",
    "@focal_ubuntu//libncurses6",
    "@focal_ubuntu//perl",
    "@focal_ubuntu//python3",
    "@focal_ubuntu//tzdata",
    "@focal_ubuntu//strace",
    "@focal_ubuntu//grep",
    "@focal_ubuntu//openssl",
    "@focal_ubuntu//build-essential",
    "@focal_ubuntu//gcc",
    "@focal_ubuntu//g++",
    "@focal_ubuntu//gzip",
    "@focal_ubuntu//findutils",
    "@focal_ubuntu//sed",
    "@focal_ubuntu//libelf1",
    "@focal_ubuntu//libdrm2",
    "@focal_ubuntu//libdrm-amdgpu1",
    "@focal_ubuntu//libnuma1",
    "@focal_ubuntu//libxml2",
    "@focal_ubuntu//libexpat1",
    "@focal_ubuntu//libexpat1-dev",
]

flatten(
    name = "flatten_packages",
    tars =  [
        "%s/amd64" % package
        for package in PACKAGES
    ],
)

dedupe_tar(
    name = "packages",
    src = ":flatten_packages",
    visibility = ["//visibility:public"],
)
