load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@rules_distroless//apt:defs.bzl", "dpkg_status")
load("@rules_distroless//distroless:defs.bzl", "group", "passwd", "flatten", "cacerts")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("//utils/bazel/dedup_tar:defs.bzl", "dedupe_tar")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

passwd(
    name = "passwd",
    entries = [
        {
            "uid": 0,
            "gid": 0,
            "home": "/root",
            "shell": "/bin/bash",
            "username": "r00t",
        },
        {
            "uid": 100,
            "gid": 65534,
            "home": "/home/_apt",
            "shell": "/usr/sbin/nologin",
            "username": "_apt",
        },
    ],
    visibility = ["//visibility:public"],
)

cacerts(
    name = "cacerts",
    package = "@noble_ubuntu//ca-certificates/amd64:data",
    visibility = ["//visibility:public"],
)

group(
    name = "group",
    entries = [
        {
            "name": "root",
            "gid": 0,
        },
        {
            "name": "_apt",
            "gid": 65534,
        },
    ],
    visibility = ["//visibility:public"],
)


pkg_tar(
    name = "bazelisk",
    package_dir = "/usr/bin",
    srcs = [
        "@bazelisk//file",
    ],
    visibility = ["//visibility:public"],
)

PACKAGES = [
    "@noble_ubuntu//wget",
    "@noble_ubuntu//apt",
    "@noble_ubuntu//bash",
    "@noble_ubuntu//ca-certificates",
    "@noble_ubuntu//coreutils" ,
    "@noble_ubuntu//dpkg",
    "@noble_ubuntu//gawk",
    "@noble_ubuntu//libncurses6",
    "@noble_ubuntu//perl",
    "@noble_ubuntu//python3",
    "@noble_ubuntu//tzdata",
    "@noble_ubuntu//strace",
    "@noble_ubuntu//grep",
    "@noble_ubuntu//openssl",
    "@noble_ubuntu//build-essential",
    "@noble_ubuntu//gcc",
    "@noble_ubuntu//g++",
    "@noble_ubuntu//gzip",
    "@noble_ubuntu//findutils",
    "@noble_ubuntu//sed",
    "@noble_ubuntu//libelf1",
    "@noble_ubuntu//libdrm2",
    "@noble_ubuntu//libdrm-amdgpu1",
    "@noble_ubuntu//libnuma1",
    "@noble_ubuntu//libxml2",
    "@noble_ubuntu//libexpat1",
    "@noble_ubuntu//libexpat1-dev",
]

flatten(
    name = "flatten_packages",
    tars =  [
        "%s/amd64" % package
        for package in PACKAGES
    ],
)

dedupe_tar(
    name = "packages",
    src = ":flatten_packages",
    visibility = ["//visibility:public"],
)
